samples/_failures_safe/1761712548_4a7131_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d21558d2.c: In function ‘main’:
./samples/SAFE/__tmp_d21558d2.c:167:5: error: expected declaration or statement at end of input
  167 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_d21558d2.c:167:5: error: expected declaration or statement at end of input
